May 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * data/pcsx.glade2: Moved About dialog box out of glade2 file.
 * gui/AboutDlg.c: Added.
 * gui/AboutDlg.h: Likewise.
 * gui/Gtk2Gui.c: Call RunAboutDialog() instead of showing about dialog from
   glade2 file.
 * po/pcsx.pot, po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/zh_CN.po:
   Updated.
 * gui/Makefile.am: Added AboutDlg.c.

May 13, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.h: CDRgetBufferSub for internal cdr plugin.
 * libpcsxcore/plugins.c: Likewise.

May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfnet/gui.c: Get the correct address under GNU/Linux.
 * plugins/dfnet/dfnet.c: Removed sockGetIP(), which is unused in plugin.
 * plugins/dfnet/dfnet.h: Likewise.
 * plugins/dfnet/dfnet.glade2: Fixed max length of IP address entry.
 * libpcsxcore/gte.c: Improved accuracy (or 'inaccuracy') of the divider
   (courtesy of shalma).
 * libpcsxcore/gte_divider.h: Added.
 * win32/pcsx.dsp: Added gte_divider.h.
 * win32/pcsx.vcproj: Likewise.
 * win32/pcsx.dev: Likewise.

May 13, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.h: PADreadPort1/2 for NRage pad plugin (windows).
 * libpcsxcore/plugins.c: Likewise.
 * po/ru_RU.po: Updated.

May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: Added plugins/dfnet/Makefile.am.
 * Makefile.am: Added plugins/dfnet.
 * plugins/dfnet/dfnet.c: Added NetPlay plugin (based on netSock).
 * plugins/dfnet/unix.c: Likewise.
 * plugins/dfnet/cfg.c: Likewise.
 * plugins/dfnet/gui.c: Likewise.
 * plugins/dfnet/dfnet.h: Likewise.
 * plugins/dfnet/Makefile.am: Likewise.
 * plugins/dfnet/dfnet.glade2: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Use gtk_dialog_run() for about dialog.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Likewise.
 * po/pt_BR.po, po/it.po, po/zh_CN.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot:
   Updated.
 * po/update-pot.sh: Added files in plugins/dfnet.

May 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
