@@ -1,8 +1,101 @@
-gui/Gtk2Gui.c
-gui/LnxMain.c
-gui/Plugin.c
 data/pcsx.glade2
-emulator/Misc.c
-emulator/PsxMem.c
-emulator/Sio.c
-emulator/plugins.c
+gui/AboutDlg.c
+gui/AboutDlg.h
+gui/Cheat.c
+gui/Cheat.h
+gui/ConfDlg.c
+gui/ConfDlg.h
+gui/Config.c
+gui/DebugMemory.c
+gui/DebugMemory.h
+gui/Gtk2Gui.c
+gui/Linux.h
+gui/LnxMain.c
+gui/MemcardDlg.c
+gui/MemcardDlg.h
+gui/nopic.h
+gui/Plugin.c
+libpcsxcore/cdriso.c
+libpcsxcore/cdrom.c
+libpcsxcore/cheat.c
+libpcsxcore/debug.c
+libpcsxcore/decode_xa.c
+libpcsxcore/disr3000a.c
+libpcsxcore/gte.c
+libpcsxcore/mdec.c
+libpcsxcore/misc.c
+libpcsxcore/plugins.c
+libpcsxcore/ppf.c
+libpcsxcore/psxbios.c
+libpcsxcore/psxcommon.c
+libpcsxcore/psxcounters.c
+libpcsxcore/psxdma.c
+libpcsxcore/psxhle.c
+libpcsxcore/psxhw.c
+libpcsxcore/psxinterpreter.c
+libpcsxcore/psxmem.c
+libpcsxcore/r3000a.c
+libpcsxcore/sio.c
+libpcsxcore/socket.c
+libpcsxcore/spu.c
+plugins/dfcdrom/cdr.c
+plugins/dfcdrom/cdrcfg-0.1df/dfcdrom.glade2
+plugins/dfcdrom/cdrcfg-0.1df/main.c
+plugins/dfcdrom/cdr-linux.c
+plugins/dfcdrom/cdr-null.c
+plugins/dfcdrom/cfg.c
+plugins/dfinput/analog.c
+plugins/dfinput/cfg.c
+plugins/dfinput/cfg-gtk2.c
+plugins/dfinput/dfinput.glade2
+plugins/dfinput/pad.c
+plugins/dfinput/sdljoy.c
+plugins/dfinput/xkb.c
+plugins/dfnet/cfg.c
+plugins/dfnet/dfnet.c
+plugins/dfnet/dfnet.glade2
+plugins/dfnet/dfnet.h
+plugins/dfnet/gui.c
+plugins/dfnet/unix.c
+plugins/dfsound/adsr.c
+plugins/dfsound/alsa.c
+plugins/dfsound/cfg.c
+plugins/dfsound/dma.c
+plugins/dfsound/freeze.c
+plugins/dfsound/nullsnd.c
+plugins/dfsound/oss.c
+plugins/dfsound/psemu.c
+plugins/dfsound/pulseaudio.c
+plugins/dfsound/registers.c
+plugins/dfsound/reverb.c
+plugins/dfsound/spu.c
+plugins/dfsound/spucfg-0.1df/dfsound.glade2
+plugins/dfsound/xa.c
+plugins/dfxvideo/cfg.c
+plugins/dfxvideo/draw.c
+plugins/dfxvideo/fps.c
+plugins/dfxvideo/gpu.c
+plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2
+plugins/dfxvideo/key.c
+plugins/dfxvideo/menu.c
+plugins/dfxvideo/prim.c
+plugins/dfxvideo/soft.c
+plugins/dfxvideo/zn.c
+plugins/peopsxgl/cfg.c
+plugins/peopsxgl/draw.c
+plugins/peopsxgl/fps.c
+plugins/peopsxgl/gpu.c
+plugins/peopsxgl/gpucfg/callbacks.c
+plugins/peopsxgl/gpucfg/interface.c
+plugins/peopsxgl/gpucfg/main.c
+plugins/peopsxgl/gpucfg/support.c
+plugins/peopsxgl/key.c
+plugins/peopsxgl/menu.c
+plugins/peopsxgl/prim.c
+plugins/peopsxgl/soft.c
+plugins/peopsxgl/texture.c
+win32/gui/AboutDlg.c
+win32/gui/CheatDlg.c
+win32/gui/ConfigurePlugins.c
+win32/gui/plugin.c
+win32/gui/WndMain.c
